# Digital-Breakthrough-2020-Rostov

./: .gitignore  Cargo.toml  Dockerfile  README.md  package.json
Android/: settings.gradle
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/res/layout/: activity_flat_select.xml  activity_flat_select_list.xml  activity_login.xml  activity_main.xml  activity_main2.xml  app_bar_main.xml  fragment_appeal.xml  fragment_information.xml  fragment_vote.xml  fragment_vote_list.xml  fragment_vote_list_item.xml
Android/app/src/main/res/navigation/: mobile_navigation.xml
Android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
Android/gradle/wrapper/: gradle-wrapper.properties
blockchain/: contract.sol  deploy.js  genesis.json
blockchain/api/: add_user.js  add_voice.js  create_vote.js  get_vote.js  get_vote_ids.js
blockchain/contracts/: Vote.sol
blockchain/migrations/: 1_initial_migration.js
blockchain/test/: vote.js
configurations/: blockchain.example.toml
docs/: getting_start.md  static.md
frontend/app/templates/: index.pug
frontend/error/templates/: _layout.pug
migrations/2020-08-21-200204_haubark/: up.sql
migrations/2020-08-22-141935_haubark/: down.sql  up.sql
src/: main.rs  schema.rs
src/database/create/: company.rs  mod.rs  user.rs
src/database/read/: companys.rs  mod.rs  statics.rs  users.rs
src/models/: api.rs  database.rs  mod.rs
src/routes/: mod.rs
src/routes/api/: authorization.rs  mod.rs  register.rs  voice.rs
(+22 files in other folders)
